--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "run-s lint:*",
+    "lint:eslint": "eslint . --ext .ts,.tsx",
+    "lint:types": "tsc --noEmit",
+    "lint:secret": "secretlint --maskSecrets --secretlintignore .gitignore '**/*'",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write .",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -35,8 +39,9 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.21",
+    "@secretlint/secretlint-rule-preset-recommend": "^9.2.0",
+    "@types/node": "^20.17.47",
+    "@types/react": "^18.3.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -52,11 +57,13 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "jsdom": "^22.1.0",
     "msw": "^1.3.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "secretlint": "^9.3.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
+    "typescript": "^5.8.3",
     "vite": "^4.4.9",
     "vitest": "^0.34.4"
   }
