--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,10 +36,10 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@secretlint/secretlint-rule-preset-recommend": "^9.2.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@secretlint/secretlint-rule-preset-recommend": "^9.2.0",
     "@types/node": "^20.17.47",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.2.7",
@@ -49,6 +49,7 @@
     "autoprefixer": "^10.4.15",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
