--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,5 +11,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 # アプリケーションコードをコピー
 COPY . .
 
+# 環境変数が指定されていない場合のデフォルト値
+ENV PORT=8000
+
+# ポート管理
+# Renderなどのプラットフォームでは環境変数でポートを指定する場合がある
+EXPOSE ${PORT}
+
 # 実行コマンド
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT}"]
