--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
   - type: web
     name: syncfam-api # サービス名を任意に設定
     env: docker
-    dockerfilePath: Dockerfile # プロジェクトルートのDockerfileを指定
-    dockerContext: .           # Dockerビルドコンテキストをプロジェクトルートに設定
+    dockerfilePath: backend/Dockerfile  # backendディレクトリの中にあるDockerfile
+    dockerContext: backend
     region: singapore  # 例: 東京リージョン (asia-northeast1) または singapore など
                               # データベースと同じリージョンを推奨
     plan: free            # 必要に応じて変更 (例: free, standard)
