migrationコマンドの追加

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # アプリケーションコードをコピー
 COPY . .
 
+# 起動スクリプトに実行権限を付与
+RUN chmod +x start.sh
+
 # 環境変数が指定されていない場合のデフォルト値
 ENV PORT=8000
 
@@ -18,5 +21,5 @@ ENV PORT=8000
 # Renderなどのプラットフォームでは環境変数でポートを指定する場合がある
 EXPOSE ${PORT}
 
-# 実行コマンド
-CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT}"]
+# 起動コマンド
+CMD ["/app/start.sh"]
