設定の変更

--- a/render.yaml
+++ b/render.yaml
@@ -28,10 +28,9 @@ services:
     healthCheckPath: /
     autoDeploy: true
 
-  # PostgreSQLデータベース
-  - type: postgres
-    name: syncfam-db
+databases:
+  - name: syncfam-db
     region: singapore
     plan: free
-    postgresMajorVersion: 15
+    postgresMajorVersion: "15"
     ipAllowList: []
