--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - SECRET_KEY=${SECRET_KEY:-supersecretkey}
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
+      - DEBUG=True
     depends_on:
       db:
         condition: service_healthy
