--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "secretlint": "^9.3.2",
     "tailwindcss": "^3.3.3",
+    "terser": "^5.29.2",
     "typescript": "^5.8.3",
     "vite": "^4.4.9",
     "vitest": "^0.34.4"
